try to fix links on iphone

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -97,6 +97,12 @@
 
 
 
+@media screen and (max-width: 600px){
+  .site-nav {
+    border: none;
+  }
+}
+
 /**
  * Site footer
  */
